feat dockerfile and compose added downgrade java version to 8